<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

<TextView 
    android:id="@+id/time"
    android:layout_width="fill_parent"
    android:layout_height = "wrap_content"
    android:text = "@string/time"
    android:textSize="@dimen/time_size"
    android:gravity ="center"/>

<TextView 
    android:id="@+id/city"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:textSize="@dimen/city_size"
    android:layout_below="@id/time"
    android:layout_marginTop="20dp"
    android:text="@string/city"
    android:gravity="center"/>

<TextView 
    android:id="@+id/status"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:text="@string/status"
    android:layout_below="@id/city"
    android:layout_marginTop="20dp"
    android:textSize="@dimen/city_size"
    android:gravity="center"/>

<TextView 
    android:id="@+id/temperature"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:text="@string/temp"
    android:layout_below="@id/status"
    android:textSize="@dimen/city_size"
    android:gravity="center"
    android:layout_marginTop="20dp"/>

<ImageButton
    android:id="@+id/refresh"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/temperature"
    android:layout_below="@+id/temperature"
    android:layout_marginTop="30dp"
    android:contentDescription="@string/refresh"
    android:src="@drawable/refresh" />
 
</RelativeLayout>
